# knoema-python-driver

./: .gitignore  LICENSE  README.rst  api.py  apy_definitions.py  data.py  knoema.py  pyproject.toml  setup.py  test_knoema.py
knoema/: __init__.py  api.py  api_client.py  api_config.py  api_definitions.py  api_definitions_search.py  api_definitions_sema.py  data.py  data_reader.py  upload_frame.py  view_definitions.py
tests/: conftest.py  test_knoema.py  test_knoema_data.py  test_knoema_data_time.py  test_knoema_dataset.py  test_knoema_dimension.py  test_knoema_private.py  test_knoema_private_upload.py  test_knoema_upload.py
