[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knoema"
version = "1.3.1"
authors = [
  { name="Knoema", email="info@knoema.com" },
]
description = "Official Python package for Knoema's API"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=2.0.0",
  "pytest-shutil==1.7.0"
]
keywords = ["API", "knoema"]

[project.urls]
Homepage = "https://github.com/Knoema/knoema-python-driver"
Repository = "https://github.com/Knoema/knoema-python-driver.git"
Issues = "https://github.com/Knoema/knoema-python-driver/issues"